<resources>
    <string name="GIF">GIF</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_storage_permission_message">Storage access permission is needed to use this function. Please grant us Storage access permission.</string>
    <string name="account_live_stream">Account</string>
    <string name="action_settings">Settings</string>
    <string name="action_watch_install_ads">Watch an ad and install the app</string>
    <string name="add">Add</string>
    <string name="add_background">Add background</string>
    <string name="add_sticker">Add Sticker</string>
    <string name="add_text">Add Text</string>
    <string name="add_with_count">Add (%d)</string>
    <string name="adjust_volume">Adjust Volume</string>
    <string name="advanced_mode">Advanced</string>
    <string name="advanced_mode_description">More powerful. Recommended for recording with frequent changes on screen</string>
    <string name="all_audio">All Audio</string>
    <string name="all_images">All Images</string>
    <string name="all_videos">All Videos</string>
    <string name="allow_display_over_other_apps">Allow displaying over other apps</string>
    <string name="allow_notifications">Allow notification panel</string>
    <string name="already_vip">Already upgraded?</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_id">ca-app-pub-8186292768750139~4993471047</string>
    <string name="app_image_view">AZ Image Viewer</string>
    <string name="app_name">AZ Screen Recorder</string>
    <string name="app_video_view">AZ Video Player</string>
    <string name="audio_recording">Audio recording</string>
    <string name="audio_source">Audio source</string>
    <string name="auto_caption_short">Captions</string>
    <string name="avoid_unexpected_stop">Avoid unexpected stop</string>
    <string name="avoid_unexpected_stop_summary">Strengthen recording stability by turning off the system battery optimization for this app</string>
    <string name="az_common_rotate">Rotate</string>
    <string name="background">Background</string>
    <string name="background_color">Background color</string>
    <string name="brush">Brush</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="capture">Capture</string>
    <string name="click_continue_to_record_silent">Click CONTINUE to record a silent video.</string>
    <string name="common_continue">Continue</string>
    <string name="crop">Crop</string>
    <string name="cut">Cut</string>
    <string name="default_time_limit">600</string>
    <string name="delete">Delete</string>
    <string name="enable_countdown_timer">Countdown before start</string>
    <string name="font">Font</string>
    <string name="frame_rate_2">Frame rate</string>
    <string name="hide_floating_during_recording">Hide floating bubble during recording</string>
    <string name="hide_popup_after_screenshot">Hide popup window after taking screenshot</string>
    <string name="hide_popup_window_after_recording">Hide popup window after recording video</string>
    <string name="image">Image</string>
    <string name="live_stream">Live Stream</string>
    <string name="logo">LOGO</string>
    <string name="magic_button_invisible_control">Magic button: invisible control</string>
    <string name="magic_button_summary">Pause, resume, or stop recording without leaving visible controls in the exported video.</string>
    <string name="magic_button_summary_ticked">Single tap to pause/resume recording, long press to stop</string>
    <string name="microphone_occupied_below_10">Another app is using the microphone. Close it and try again.</string>
    <string name="microphone_unavailable">Microphone is unavailable</string>
    <string name="music">Music</string>
    <string name="no_space_warning">Less than 100 MB of storage remains. Free up space before recording.</string>
    <string name="ok">OK</string>
    <string name="orientation">Orientation</string>
    <string name="others">OTHERS</string>
    <string name="output_directory">Output directory</string>
    <string name="pref_ads_view">prefAdsView</string>
    <string name="pref_audio_source">prefAudioSource</string>
    <string name="pref_avoid_unexpected_stop">prefAvoidUnexpectedStop</string>
    <string name="pref_bitrate">PrefBitrate</string>
    <string name="pref_category_others">pref_category_others</string>
    <string name="pref_category_recording_controls">prefCategoryRecordingControl</string>
    <string name="pref_category_stability">pref_category_stability</string>
    <string name="pref_category_toolbox">prefCategoryToolbox</string>
    <string name="pref_category_video">prefCategoryVideo</string>
    <string name="pref_category_view">prefCategoryView</string>
    <string name="pref_countdown">prefCountdownTimerValue</string>
    <string name="pref_enable_logo">prefEnableLogo</string>
    <string name="pref_enable_single_app">prefEnableSingleApp</string>
    <string name="pref_enable_watermark">prefEnableWatermark</string>
    <string name="pref_frame_rate">prefFramerate</string>
    <string name="pref_hide_record_window">prefHideRecordWindow</string>
    <string name="pref_hide_saved_window_after_recording">hide_video_saved_window</string>
    <string name="pref_hide_screenshot_saved_window">disable_review_popup</string>
    <string name="pref_live_stream">prefLiveStream</string>
    <string name="pref_logo_image_path">prefLogoImagePath</string>
    <string name="pref_logo_size">prefLogoSize</string>
    <string name="pref_orientation">PrefOrientation</string>
    <string name="pref_recording_mode">prefRecordingMode</string>
    <string name="pref_resolution">PrefResolution</string>
    <string name="pref_screen_root">prefScreenRoot</string>
    <string name="pref_screen_watermark_logo">prefPreferenceScreenWatermarkLogo</string>
    <string name="pref_show_camera">prefShowFacecam</string>
    <string name="pref_show_screendraw">prefShowScreendraw</string>
    <string name="pref_show_screenshot">prefShowScreenshot</string>
    <string name="pref_show_stop_options">prefPreferenceScreenStopOptions</string>
    <string name="pref_show_touches">prefShowTouches</string>
    <string name="pref_stop_on_screen_off">prefStopOnScreenOff</string>
    <string name="pref_stop_on_shake">prefStopOnShake</string>
    <string name="pref_stop_on_time_limit">prefTimeLimitEnable</string>
    <string name="pref_time_limit_value">TimeLimit</string>
    <string name="pref_trash_folder">pref_trash_folder</string>
    <string name="pref_use_internal_storage">prefOutputDirInternal</string>
    <string name="pref_use_magic_button">prefUseMagicButton</string>
    <string name="pref_use_trash">pref_use_trash</string>
    <string name="pref_watermark_bg_color">prefWatermarkBgColor</string>
    <string name="pref_watermark_font">prefWatermarkFont</string>
    <string name="pref_watermark_text">prefWatermarkText</string>
    <string name="pref_watermark_text_color">prefWatermarkTextColor</string>
    <string name="pref_watermark_text_size">prefWatermarkTextSize</string>
    <string name="protect_recordings_title">Avoid interrupted recordings</string>
    <string name="ratio">Ratio</string>
    <string name="recording_controls">Recording controls</string>
    <string name="recording_mode">Recording mode</string>
    <string name="resolution">Resolution</string>
    <string name="screenshot">Screenshot</string>
    <string name="select_all">Select all</string>
    <string name="send_feedback">Send feedback</string>
    <string name="share">Share</string>
    <string name="show_logo">Show logo</string>
    <string name="show_text">Show text</string>
    <string name="show_touches">Show touches</string>
    <string name="single_app_recording">Single-app recording</string>
    <string name="single_app_recording_summary">Record full screen only</string>
    <string name="single_app_recording_summary_ticked">Let users pick one app to record</string>
    <string name="size">Size</string>
    <string name="speed">Speed</string>
    <string name="stability">Stability (less buggy)</string>
    <string name="stability_options">Stability Options</string>
    <string name="sticker">Sticker</string>
    <string name="stop_on_scr_off">Stop on screen off</string>
    <string name="stop_on_scr_off_summary">Lock the screen to stop recording</string>
    <string name="stop_on_shake">Stop by shaking</string>
    <string name="stop_on_shake_summary">Shake device to stop recording</string>
    <string name="stop_on_time_limit">Enable time limit</string>
    <string name="stop_on_time_limit_default_summary">Unlimited</string>
    <string name="stop_on_time_limit_summary">Stop recording when the time limit is reached</string>
    <string name="stop_options">Stop options</string>
    <string name="survey">Survey</string>
    <string name="text">Text</string>
    <string name="text_all_caps">TEXT</string>
    <string name="text_and_logo">Text and logo</string>
    <string name="text_color">Text color</string>
    <string name="text_size">Text size</string>
    <string name="time_limit">Time limit</string>
    <string name="time_limit_in_second">Time limit in seconds</string>
    <string name="toast_stop_on_low_memory">Free space is not enough</string>
    <string name="toolbox">Toolbox</string>
    <string name="translation_quality">Translation quality</string>
    <string name="trash_folder">Trash folder</string>
    <string name="upgrade">Upgrade</string>
    <string name="use_trash">Use trash</string>
    <string name="use_trash_disable_summary">Files will be deleted permanently</string>
    <string name="use_trash_enable_summary">Deleted files will be moved to trash</string>
    <string name="user_interface">User interface</string>
    <string name="video_configuration">VIDEO CONFIGURATION</string>
    <string name="video_editor">Video editor</string>
    <string name="video_quality">Video quality</string>
    <string name="view_options">View Options</string>
    <string name="what_to_improve">What should we improve the most in this app?</string>
</resources>