<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:tag="layout/dialog_what_to_improve_0" android:layout_width="wrap_content" android:layout_height="wrap_content" app:cardBackgroundColor="@color/white" app:cardCornerRadius="7.0dp" app:cardElevation="3.0dp" app:cardPreventCornerOverlap="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:background="#00ffffff" android:padding="13.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/dark_grey" android:id="@id/question_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/what_to_improve" android:layout_alignParentTop="true" android:layout_alignParentStart="true" />
        <LinearLayout android:orientation="vertical" android:id="@id/cb_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_below="@id/question_tv">
            <CheckBox android:textColor="@color/grey" android:tag="Stability" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dp" android:text="@string/stability" android:buttonTint="@color/grey" />
            <CheckBox android:textColor="@color/grey" android:tag="User interface" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dp" android:text="@string/user_interface" android:buttonTint="@color/grey" />
            <CheckBox android:textColor="@color/grey" android:tag="Translation quality" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dp" android:text="@string/translation_quality" android:buttonTint="@color/grey" />
            <CheckBox android:textColor="@color/grey" android:tag="Audio recording" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dp" android:text="@string/audio_recording" android:buttonTint="@color/grey" />
            <CheckBox android:textColor="@color/grey" android:tag="Video quality" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dp" android:text="@string/video_quality" android:buttonTint="@color/grey" />
            <CheckBox android:textColor="@color/grey" android:tag="Video editor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dp" android:text="@string/video_editor" android:buttonTint="@color/grey" />
            <CheckBox android:textColor="@color/grey" android:tag="Live streaming tool" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dp" android:text="@string/live_stream" android:buttonTint="@color/grey" />
            <CheckBox android:textColor="@color/grey" android:tag="Others" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/others" android:buttonTint="@color/grey" />
        </LinearLayout>
        <TextView android:enabled="false" android:textSize="13.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/send_feedback_btn" android:background="@drawable/bg_positive_button" android:layout_width="match_parent" android:layout_height="34.0dp" android:layout_marginTop="10.0dp" android:text="@string/send_feedback" android:layout_below="@id/cb_layout" />
        <TextView android:textSize="13.0sp" android:textColor="@color/dark_grey" android:gravity="center" android:id="@id/cancel_btn" android:background="@drawable/bg_cancel_button" android:layout_width="match_parent" android:layout_height="34.0dp" android:layout_marginTop="10.0dp" android:layout_marginBottom="4.0dp" android:text="@string/cancel" android:layout_below="@id/send_feedback_btn" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
