<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/root_view" android:background="@color/white" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/very_dark_grey" android:layout_gravity="center_horizontal" android:id="@id/tv_review_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/toast_stop_on_low_memory" />
    <TextView android:textSize="14.0sp" android:textColor="@color/black" android:layout_width="@dimen/warning_text_width" android:layout_height="0.0dp" android:layout_margin="10.0dp" android:text="@string/no_space_warning" android:layout_weight="1.0" />
    <Button android:textColor="@color/white" android:id="@id/btn_ok" android:background="@color/bright_red" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/ok" />
</LinearLayout>
